# fambot

./: .env.shadow  .gitignore  README.md  pyproject.toml
bot/: fambot.py
tests/: test_integration.py  test_unit.py
