[tool.poetry]
name = "fambot"
version = "0.1.0"
description = "\"Family-oriented bot for Discord\""
authors = ["Tom Flanigan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
